# zamboni

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  config_postgres.yaml  config_sqlite.yaml  pyproject.toml  requirements.txt  tester.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
aws/: Dockerfile.sagemaker  config_sagemaker.yaml  entrypoint_sagemaker.py
data/: teams.txt
notebooks/: APIWalkthrough.ipynb  DataExploration.ipynb  SeasonWins.ipynb  StrategyComparison.ipynb  Trainer.ipynb  Validation.ipynb
scripts/: agent_predictions.py  create_database.py  create_game_table.py  create_player_table.py  create_season_table.py  create_table.py  create_team_table.py  create_view.py  db_export.py  db_players.py  download_all.py  drop_table.py  export_games.py  games_to_csv.py  launch_api.sh  llm_game_predictions.py  load_to_sql.py  make_cron.sh  performance_evaluator.py  query_games.py  query_players.py  query_rosters.py  query_seasons.py  query_teams.py  setup_db.py
src/zamboni/: __init__.py  __main__.py  agent.py  api_caller.py  api_download.py  backtest.py  core.py  create_tables.py  data_management.py  db_con.py  download_games.py  download_players.py  download_rosters.py  download_teams.py  drop_table.py  export_statements.py  exporter.py  fast_api.py  load_games.py  load_players.py  load_roster_entries.py  load_teams.py  main.py  nhl_models.py  nn_data.py  pd_helpers.py  predicter.py  predicter_service.py  register_predicter.py  sport.py  sql_loader.py  storage.py  streamlit.py  table_creator.py  table_statements.py  trainer.py  training.py  utils.py  view_statements.py
src/zamboni/models/: nn.py  simplenn.py
src/zamboni/predicters/: predicter.py
src/zamboni/sql/: .sql_loader.py.swp  __init__.py  export_statements.py  games_view.py  sql_handler.py  sql_helpers.py  sql_loader.py  statements.py  table_creator.py  table_statements.py  tables.py  trigger_statements.py  view_statements.py
tests/: test_api_data.py  test_api_func.py  test_api_urls.py  test_db_setup.py  test_nhl_models.py  test_sqlalchemy_conversion.py  test_training.py
