[project]
name = "zamboni"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nluongo", email = "nluongo@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "jupyter>=1.0.0",
    "ruff>=0.6.4",
    "pandas>=2.2.2",
    "resolvelib>=1.0.1",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
    "matplotlib>=3.9.2",
    "torch>=2.5.1",
    "scikit-learn>=1.5.2",
    "python-crontab>=3.2.0",
    "streamlit>=1.42.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
zamboni-main = "zamboni.main:main"
download-games = "zamboni.api_download:download_games"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
