[project]
name = "zamboni"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nluongo", email = "nluongo@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "jupyter>=1.0.0",
    "ruff>=0.11.11",
    "pandas>=2.2.2",
    "resolvelib>=1.0.1",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
    "matplotlib>=3.9.2",
    "torch>=2.5.1",
    "scikit-learn>=1.5.2",
    "python-crontab>=3.2.0",
    "streamlit>=1.42.2",
    #"langchain>=0.3.25",
    #"langchain-community>=0.3.23",
    #"langchain-openai>=0.3.16",
    "faiss-cpu>=1.11.0",
    "pre-commit>=4.2.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    #"langgraph>=0.6.3",
    #"openai>=1.109.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
zamboni = "zamboni.main:cli"
backtest = "zamboni.backtest:main"
register-predicter = "zamboni.register_predicter:main"
download-games = "zamboni.api_download:download_games"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
